--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-firestore": "^0.14.0",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
