--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-dom": "^17.0.1",
-    "react-redux": "5.1.1",
-    "react-redux-firebase": "2.2.4",
+    "react-hook-form": "^7.7.1",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
