--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
-    "bootstrap-icons": "^1.4.0",
     "firebase": "^8.2.7",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^7.7.1",
     "react-redux": "^5.1.1",
