--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "exceljs": "^4.2.1",
+    "file-saver": "^2.0.5",
     "firebase": "^8.2.7",
     "moment": "^2.29.1",
     "react": "^17.0.1",
@@ -23,7 +24,8 @@
     "redux-firestore": "^0.14.0",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.0"
   },
   "scripts": {
     "start": "react-scripts start",
